testCases/invalidTests/test4.cy
//Test dangling %end

%hook NSObject

function declaration() {
	return 'testing!';
}

%end

%end